Add searching choice screen

--- a/ui/static/locale/en.json
+++ b/ui/static/locale/en.json
@@ -1,3 +1,7 @@
 {
-  "APP_NAME": "Searcher App"
+  "APP_NAME": "Searcher App",
+  "SEARCHING_FOR": "What are you searching for?",
+  "APPOINTMENT_DATES": "Appointment dates",
+  "SELECT_ONE": "(Select one of the choices below to proceed)",
+  "MORE_INFORMATION": "More Information Soon"
 }
