--- a/ui/static/locale/en.json
+++ b/ui/static/locale/en.json
@@ -7,6 +7,9 @@
   "APPOINTMENT_DATES": "Appointment dates",
   "SELECT_ONE": "(Select one of the choices below to proceed)",
   "MORE_INFORMATION": "More Information Soon",
+  "RESULTS": "Results",
+  "APPOINTMENT_RESULTS": "The registration interview appointment for registration number {$ number $} is scheduled on {$ date $} at the {$ office $}.",
+  "CLICK_FOR_MAP": "Click here for a map of the area of the office.",
 
   "SELECT_LANGUAGE_EN": "Select your language",
   "SELECT_LANGUAGE_EL": "επιλέξτε τη γλώσσα σας",
