Frontend redone; add new logo

--- a/ui/static/locale/en.json
+++ b/ui/static/locale/en.json
@@ -4,7 +4,7 @@
   "REFUGEE_INFO": "Refugee Info",
   "RELOCATION_DECISONS": "Relocation decisions",
   "SEARCHING_FOR": "What are you searching for?",
-  "APPOINTMENT_DATES": "Appointment dates",
+  "APPOINTMENT_DATES": "Full registration appointments",
   "SELECT_ONE": "(Select one of the choices below to proceed)",
   "MORE_INFORMATION": "More Information Soon",
   "RESULTS": "Results",
