--- a/ui/static/locale/en.json
+++ b/ui/static/locale/en.json
@@ -1,5 +1,5 @@
 {
-  "APP_NAME": "Searcher App",
+  "APP_NAME": "Search Tool",
   "OTHER_LINKS": "Useful links",
   "REFUGEE_INFO": "Refugee Info",
   "RELOCATION_DECISONS": "Relocation decisions",
