--- a/ui/static/locale/en.json
+++ b/ui/static/locale/en.json
@@ -33,5 +33,8 @@
   "CONFIRM_NUMBER": "Re-enter your registration number",
   "SUBMIT": "Submit",
   "NUMBERS_DONT_MATCH": "Numbers don't match",
-  "INVALID_NUMBER": "Registration number not found"
+  "INVALID_NUMBER": "Registration number not found",
+
+  "UPDATE_DATA_INFO_1": "If your phone number or address change, you need to email the Asylum Service at",
+  "UPDATE_DATA_INFO_2": "This is very important, because the authorities need to contact you to tell you when to come to the Regional Asylum Office. You need to include your name, date of birth, registration number, new phone number and your new address in this email, in English or Greek."
 }
