Improve language picker

--- a/ui/static/locale/en.json
+++ b/ui/static/locale/en.json
@@ -22,8 +22,8 @@
   "GREEK": "ελληνικά",
   "ARABIC": "العربية",
   "FARSI": "فارسی",
-  "KURMANJI": "کورمانجی",
-  "SORANI": "سۆرانی",
+  "KURMANJI": "Kurmancî",
+  "PUNJABI": "ਪੰਜਾਬੀ",
   "DARI": "دری",
   "URDU": "اُردُو",
 
