--- a/ui/static/locale/en.json
+++ b/ui/static/locale/en.json
@@ -19,7 +19,7 @@
   "SELECT_LANGUAGE_FA": "لطفا زبان خود را انتخاب کنید",
 
   "ENGLISH": "English",
-  "GREEK": "ελληνικά",
+  "GREEK": "Eλληνικά",
   "ARABIC": "العربية",
   "FARSI": "فارسی",
   "KURMANJI": "Kurmancî",
