--- a/ui/static/locale/el.json
+++ b/ui/static/locale/el.json
@@ -1,3 +1,40 @@
 {
-  "APP_NAME": "εφαρμογή"
+  "APP_NAME": "Search Tool",
+  "OTHER_LINKS": "Χρήσιμοι σύνδεσμοι",
+  "REFUGEE_INFO": "Refugee Info",
+  "RELOCATION_DECISONS": "Αποφάσεις Μετεγκατάστασης",
+  "SEARCHING_FOR": "Τι ψάχνετε;",
+  "APPOINTMENT_DATES": "Ραντεβού για πλήρη καταγραφή",
+  "SELECT_ONE": "(επιλέξτε μία από τις παρακάτω επιλογές για να προχωρήσετε)",
+  "MORE_INFORMATION": "More Information Soon",
+  "RESULTS": "Αποτελέσματα:",
+  "APPOINTMENT_RESULTS": "Η συνέντευξη για την εξέταση της αίτησης ασύλου για τον αριθμό προκαταγραφής {$ number $$} έχει προγραμματιστεί για τις {$ hour $} {$ am_pm $} το {$ time_of_the_day $} στις {$ date $} , στο γραφείο {$ office $}.",
+  "CLICK_FOR_MAP": "Κάντε κλικ εδώ για τον χάρτη της περιοχής που βρίσκεται το γραφείο.",
+  "MORNING": "Πρωί",
+  "AFTERNOON": "Απόγευμα",
+
+  "SELECT_LANGUAGE_EN": "Select your language",
+  "SELECT_LANGUAGE_EL": "επιλέξτε τη γλώσσα σας",
+  "SELECT_LANGUAGE_AR": "الرجاء اختيار لغتك",
+  "SELECT_LANGUAGE_FA": "لطفا زبان خود را انتخاب کنید",
+
+  "ENGLISH": "English",
+  "GREEK": "ελληνικά",
+  "ARABIC": "العربية",
+  "FARSI": "فارسی",
+  "KURMANJI": "Kurmancî",
+  "PUNJABI": "ਪੰਜਾਬੀ",
+  "DARI": "دری",
+  "URDU": "اُردُو",
+
+  "FIND_REGISTRATION_NUMBER": "Εδώ θα βρείτε τον αριθμό απλής καταγραφής",
+  "ENTER_INFO_BELOW": "(Εισάγετε τα στοιχεία σας παρακάτω)",
+  "ENTER_NUMBER": "Εισάγετε τον αριθμό απλής καταγραφής",
+  "CONFIRM_NUMBER": "Επιβεβαιώστε τον αριθμό απλής καταγραφής",
+  "SUBMIT": "Υποβάλλετε",
+  "NUMBERS_DONT_MATCH": "Οι αριθμοί δεν ταιριάζουν",
+  "INVALID_NUMBER": "Ο αριθμός του αιτούντος δεν βρέθηκε",
+
+  "UPDATE_DATA_INFO_1": "Αν ο αριθμός τηλεφώνου ή διεύθυνση κατοικίας/παραμονής σας, έχει αλλάξει παρακαλώ επικοινωνήστε με την Διεύθυνση Ασύλου στην παρακάτω ηλεκτρονική διεύθυνση",
+  "UPDATE_DATA_INFO_2": "Το παρακάτω είναι απαραίτητο προκειμένου οι Αρχές να επικοινωνήσουν μαζί σας για το πότε θα παρουσιαστείται στο \"Περιφεριακή Υπηρεσία Ασύλου\". Στο ηλεκτρονικό σας μήνυμα θα πρέπει να συμπεριλάβεται τα ακόλουθα στοιχεία: Όνομα, ημερομηνία γέννησης, αριθμός αιτούντα, νέος αιρθμός τηλεφώνου, νέα διεύθυνση διαμονής/κατοικίας\" μεταφρασμένα τόσο στην Ελληνική όσο και στην Αγγλική γλώσσα."
 }
