--- a/ui/static/locale/fa.json
+++ b/ui/static/locale/fa.json
@@ -1,15 +1,17 @@
 {
   "APP_NAME": "Search Tool",
-  "OTHER_LINKS": "Useful links",
+  "OTHER_LINKS": "لینک های مفید",
   "REFUGEE_INFO": "Refugee Info",
   "RELOCATION_DECISONS": "Relocation decisions",
   "SEARCHING_FOR": "در جستجوی چه هستید؟",
   "APPOINTMENT_DATES": "وقت ملاقات برای ثبت نام کامل",
-  "SELECT_ONE": "(یکی از گزینه های زیر را انتخاب کنید تا بتوانید ادامه دهید)",
+  "SELECT_ONE": "(یکی از گزینه های زیر را انتخاب کنید تا بتوانید ادامه دهید) ",
   "MORE_INFORMATION": "More Information Soon",
-  "RESULTS": "النتائج",
-  "APPOINTMENT_RESULTS": "The registration interview appointment for registration number {$ number $} is scheduled on {$ date $} at the {$ office $}.",
+  "RESULTS": "نتایج",
+  "APPOINTMENT_RESULTS": " وقت ملاقات برای ثبت نام کامل برای شماره ثبت نام {$ number $}  در ساعت {$ hour $} {$ am_pm $} در تاریخ {$ time_of_day $} {$ date $} , در دفت {$ office $} .",
   "CLICK_FOR_MAP": "اینجا را کلیک کنید تا نقشه ناحیه ای که اداره در آن واقع شده است ببینید",
+  "MORNING": "صبح",
+  "AFTERNOON": "بعد از ظهر",
 
   "SELECT_LANGUAGE_EN": "Select your language",
   "SELECT_LANGUAGE_EL": "επιλέξτε τη γλώσσα σας",
@@ -20,16 +22,19 @@
   "GREEK": "ελληνικά",
   "ARABIC": "العربية",
   "FARSI": "فارسی",
-  "KURMANJI": "کورمانجی",
-  "SORANI": "سۆرانی",
+  "KURMANJI": "Kurmancî",
+  "PUNJABI": "ਪੰਜਾਬੀ",
   "DARI": "دری",
   "URDU": "اُردُو",
 
   "FIND_REGISTRATION_NUMBER": "شماره ثبت نام خود را در اینجا پیدا می کنید",
   "ENTER_INFO_BELOW": "(اطلاعات زیر را وارد کنید)",
-  "ENTER_NUMBER": "شماره ثبت نام خود را وارد کنی",
+  "ENTER_NUMBER": "شماره ثبت نام خود را وارد کنید",
   "CONFIRM_NUMBER": "شماره ثبت نام خود را تائید کنید",
   "SUBMIT": "تحویل دهید",
-  "NUMBERS_DONT_MATCH": "الأرقام لا تتطابق",
-  "INVALID_NUMBER": "رقم التسجيل غير موجود"
+  "NUMBERS_DONT_MATCH": "اعداد با هم مطابقت ندارند",
+  "INVALID_NUMBER": "شماره ثبت یافت نشد",
+
+  "UPDATE_DATA_INFO_1": "اگر شماره تلفن خود را و یا تغییر آدرس، شما نیاز به ایمیل سرویس پناهندگی در",
+  "UPDATE_DATA_INFO_2": "این بسیار مهم است، چرا که مقامات باید برای تماس با شما به شما بگویم که برای آمدن به پناهندگی دفتر منطقه ای. شما نیاز به شامل نام، تاریخ تولد، شماره ثبت، شماره تلفن جدید و آدرس جدید خود را در این ایمیل، به زبان انگلیسی یا یونانی."
 }
