--- a/ui/static/locale/el.json
+++ b/ui/static/locale/el.json
@@ -8,7 +8,7 @@
   "SELECT_ONE": "(επιλέξτε μία από τις παρακάτω επιλογές για να προχωρήσετε)",
   "MORE_INFORMATION": "More Information Soon",
   "RESULTS": "Αποτελέσματα:",
-  "APPOINTMENT_RESULTS": "Η συνέντευξη για την εξέταση της αίτησης ασύλου για τον αριθμό προκαταγραφής {$ number $$} έχει προγραμματιστεί για τις {$ hour $} {$ am_pm $} το {$ time_of_the_day $} στις {$ date $} , στο γραφείο {$ office $}.",
+  "APPOINTMENT_RESULTS": "Η συνέντευξη για την εξέταση της αίτησης ασύλου για τον αριθμό προκαταγραφής {$ number $} έχει προγραμματιστεί για τις {$ hour $} {$ am_pm $} το {$ time_of_the_day $} στις {$ date $} , στο γραφείο {$ office $}.",
   "CLICK_FOR_MAP": "Κάντε κλικ εδώ για τον χάρτη της περιοχής που βρίσκεται το γραφείο.",
   "MORNING": "Πρωί",
   "AFTERNOON": "Απόγευμα",
