New block of languages

--- a/ui/static/locale/pan.json
+++ b/ui/static/locale/pan.json
@@ -1,3 +1,22 @@
 {
-  "APP_NAME": "PAN Searcher App"
+  "APP_NAME": "PAN Searcher App",
+  "OTHER_LINKS": "ਉਪਯੋਗੀ ਕੜੀਆਂ",
+  "RELOCATION_DECISONS": "ਜਗ੍ਹਾ ਬਦਲਣ ਦੇ ਫੈਸਲੇ",
+  "SEARCHING_FOR": "ਤੁਸੀਂ ਕੀ ਲੱਭ ਰਹੇ ਹੋ?",
+  "APPOINTMENT_DATES": "ਪੂਰੀ ਰਜਿਸਟ੍ਰੇਸ਼ਨ ਲਈ ਅਪਾਇੰਟਮੈਂਟਾਂ",
+  "SELECT_ONE": "ਅੱਗੇ ਵਧਣ ਲਈ ਹੇਠਾਂ ਦਿੱਤੀਆਂ ਚੋਣਾਂ ਵਿੱਚੋਂ ਇੱਕ ਚੁਣੋ",
+  "RESULTS": "ਨਤੀਜੇ",
+  "APPOINTMENT_RESULTS": "ਰਜਿਸਟ੍ਰੇਸ਼ਨ ਨੰਬਰ {$ number $} ਲਈ ਪੂਰੀ ਰਜਿਸਟ੍ਰੇਸ਼ਨ {$ date $} ਨੂੰ {$ hour $} {$ am_pm $} ਵਜੇ {$ time_of_day $}, {$ office $} ਵਿਖੇ ਲਈ ਨਿਯਤ ਹੈ।",
+  "CLICK_FOR_MAP": "ਆਫਿਸ ਦੇ ਇਲਾਕੇ ਦੇ ਨਕਸ਼ੇ ਲਈ ਇੱਥੇ ਕਲਿਕ ਕਰੋ।",
+  "MORNING": "ਸਵੇਰੇ",
+  "AFTERNOON": "ਦੁਪਹਿਰ ਬਾਅਦ",
+  "FIND_REGISTRATION_NUMBER": "ਤੁਹਾਨੂੰ ਰਜਿਸਟ੍ਰੇਸ਼ਨ ਨੰਬਰ ਇੱਥੇ ਮਿਲੇਗਾ",
+  "ENTER_INFO_BELOW": "(ਹੇਠਾਂ ਜਾਣਕਾਰੀ ਦਾਖਲ ਕਰੋ)",
+  "ENTER_NUMBER": "ਆਪਣਾ ਰਜਿਸਟ੍ਰੇਸ਼ਨ ਨੰਬਰ ਦਾਖਲ ਕਰੋ",
+  "CONFIRM_NUMBER": "ਆਪਣਾ ਰਜਿਸਟ੍ਰੇਸ਼ਨ ਨੰਬਰ ਦੁਬਾਰਾ ਦਾਖਲ ਕਰੋ",
+  "SUBMIT": "ਜਮ੍ਹਾਂ ਕਰੋ",
+  "NUMBERS_DONT_MATCH": "ਨੰਬਰ ਮੇਲ ਨਹੀਂ ਖਾਂਦੇ",
+  "INVALID_NUMBER": "ਰਜਿਸਟ੍ਰੇਸ਼ਨ ਨੰਬਰ ਨਹੀਂ ਮਿਲਿਆ",
+  "UPDATE_DATA_INFO_1": "ਜੇ ਤੁਹਾਡਾ ਫੋਨ ਨੰਬਰ ਜਾਂ ਪਤਾ ਬਦਲਦਾ ਹੈ, ਤਾਂ ਤੁਹਾਨੂੰ ਅਸਾਈਲਮ ਸਰਵਿਸ ਨੂੰ ਇਸ ਤੇ ਈਮੇਲ ਕਰਨ ਦੀ ਲੋੜ ਹੈ:",
+  "UPDATE_DATA_INFO_2": "ਇਹ ਬਹੁਤ ਮਹੱਤਵਪੂਰਨ ਹੈ, ਕਿਉਂਕਿ ਅਥਾਰਿਟੀਆਂ ਨੂੰ ਤੁਹਾਨੂੰ ਦੱਸਣ ਦੀ ਲੋੜ ਹੁੰਦੀ ਹੈ ਕਿ ਖੇਤਰੀ ਅਸਾਈਲਮ ਆਫਿਸ ਵਿੱਚ ਕਦੋਂ ਆਉਣਾ ਹੈ। ਤੁਹਾਨੂੰ ਇਸ ਈਮੇਲ ਵਿੱਚ ਇੰਗਲਿਸ਼ ਜਾਂ ਗ੍ਰੀਕ ਭਾਸ਼ਾ ਵਿੱਚ, ਆਪਣਾ ਨਾਮ, ਜਨਮ ਮਿਤੀ, ਰਜਿਸਟ੍ਰੇਸ਼ਨ ਨੰਬਰ, ਨਵਾਂ ਫੋਨ ਨੰਬਰ ਅਤੇ ਆਪਣਾ ਨਵਾਂ ਪਤਾ ਸ਼ਾਮਲ ਕਰਨ ਦੀ ਲੋੜ ਹੈ।"
 }
