--- a/ui/static/locale/prs.json
+++ b/ui/static/locale/prs.json
@@ -1,3 +1,22 @@
 {
-  "APP_NAME": "PRS Searcher App"
+  "APP_NAME": "PRS Searcher App",
+  "OTHER_LINKS": "لنک های مفید",
+"RELOCATION_DECISONS": "تصامیم جابجایی",
+"SEARCHING_FOR": "شما چه چیز را جستجو مینمایید",
+"APPOINTMENT_DATES": "قرار ملاقات برای ثبت نام مکمل",
+"SELECT_ONE": "برای پیش رفتن یکي از گزینه ها را انتخاب نمایید",
+"RESULTS": "نتایج",
+"APPOINTMENT_RESULTS": "قرار ملاقات برای ثبت نام شمارهXXXXX  به ساعتXX:XXقبل از ظهر/بعد از ظهر به روزXXبرجXX سالXX در [اسم دفتر خدمات پناهدگی] تعین گردیده است.",
+"CLICK_FOR_MAP": "برای نقشه دفتر ساحوی خدمات پناهندگی اینجا را کلیک کنید.",
+"MORNING": "قبل از چاشت",
+"AFTERNOON": "بعدا از چاشت",
+"FIND_REGISTRATION_NUMBER": "اینجا میتوانید شماره ثبت نام خود را دریافت نمایید",
+"ENTER_INFO_BELOW": "معلومات ذیل را وارد نمایید",
+"ENTER_NUMBER": "شماره ثبت نام خود را وارد نمایید",
+"CONFIRM_NUMBER": "شماره ثبت نام خود را دوباره وارد نمایید",
+"SUBMIT": "ارسال نمایید",
+"NUMBERS_DONT_MATCH": "شماره یکسان نمیباشد",
+"INVALID_NUMBER": "شماره ثبت نام دریافت نگردید",
+"UPDATE_DATA_INFO_1": "اگر نشانی یا شماره تلفن شما عوض گردیده باشد پس به دفتر خدمات پناهندگی ایمیل بفرستید",
+"UPDATE_DATA_INFO_2": "این نهایت مهم است، زیرا که مقامات نیاز دارد با شما تماس بگیرد و میخواهد بگوید شما چه وقت به دفتر خدمات پناهندگی بیایید. شما باید در ایمیل تان اسم، تاریخ تولد، شماره جدید تماس، و نشانی جدید خود به زبان یونانی یا انگلیسی شامل نمایید."
 }
