--- a/ui/static/locale/ur.json
+++ b/ui/static/locale/ur.json
@@ -1,3 +1,22 @@
 {
-  "APP_NAME": "UR Searcher App"
+  "APP_NAME": "UR Searcher App",
+  "OTHER_LINKS": "مفید لنکس",
+"RELOCATION_DECISONS": "جگہ کی منتقلی کے فیصلے",
+"SEARCHING_FOR": "آپ کیا تلاش کر رہے ہیں؟",
+"APPOINTMENT_DATES": "مکمل رجسٹریشن کے اپائنٹمنٹس",
+"SELECT_ONE": "آگے بڑھنے کے لیے ذیل میں سے ایک انتخاب منتخب کریں",
+"RESULTS": "نتائج",
+"APPOINTMENT_RESULTS": "رجسٹریشن نمبر {$ number $} کے لیے مکمل رجسٹریشن اپائنٹمنٹس {$ date $} کو {$ time_of_day $} کے[ {$ hour $} {$ am_pm $} بجے {$ office $}میں طئے کیا گیا ہے۔",
+"CLICK_FOR_MAP": "دفتر کے علاقہ کے نقشہ کے لیے یہاں کلک کریں۔",
+"MORNING": "صبح",
+"AFTERNOON": "دوپہر",
+"FIND_REGISTRATION_NUMBER": "یہ وہ جگہ ہے جہاں پر آپ کو آپ کا رجسٹریشن نمبر ملے گا",
+"ENTER_INFO_BELOW": "(نیچے معلومات داخل کریں)",
+"ENTER_NUMBER": "اپنا رجسٹریشن نمبر داخل کریں",
+"CONFIRM_NUMBER": "اپنا رجسٹریشن نمبر دوبارہ داخل کریں",
+"SUBMIT": "جمع کریں",
+"NUMBERS_DONT_MATCH": "نمبرمیل نہیں کھاتا",
+"INVALID_NUMBER": "رجسٹریشن نمبر نہیں ملا",
+"UPDATE_DATA_INFO_1": "اگر آپ کا فون نمبر یا پتہ تبدیل ہو گیا ہو تو، آپ کو اس پتہ پر اسائلم سروس کو ای میل کرنا ہوگا:",
+"UPDATE_DATA_INFO_2": "یہ بہت ہی اہم ہے، کیونکہ آپ کو یہ بتانے کے لیے حکّام کو آپ سے رابطہ کرنا ہوگا کہ آپ ریجنل اسائلم آفس میں کب آئیں۔ آپ کو اپنا نام، تاریخ پیدائش، رجسٹریشن نمبر اور اپنا نیا پتہ اس ای میل میں انگریزی یا یونانی زبان میں شامل کرنا ہوگا۔"
 }
