--- a/ui/static/locale/kmr.json
+++ b/ui/static/locale/kmr.json
@@ -1,3 +1,22 @@
 {
-  "APP_NAME": "KMR Searcher App"
+  "APP_NAME": "KMR Searcher App",
+  "OTHER_LINKS": "Girêdanên alîkar",
+  "RELOCATION_DECISONS": "Biryarên bicîhkirinê",
+  "SEARCHING_FOR": "Hûn li çi digerin?",
+  "APPOINTMENT_DATES": "Serdanê qeydkirina bi temamî",
+  "SELECT_ONE": "Hilbijêre yek ji hilbijartinên li jêr bo pêdeçûnê",
+  "RESULTS": "encam",
+  "APPOINTMENT_RESULTS": "Serdana qeydkirina bi temamî ji bo hejmara qeyda {$ number $} wê darkeve li {$ hour $} {$ am_pm $} di {$ time_of_day $} di {$ date $} li {$ office $}",
+  "CLICK_FOR_MAP": "Bitikîne li vir ji bo nexşeya herêma nivîsgehê.",
+  "MORNING": "Sibê",
+  "AFTERNOON": "Piştî nîvro",
+  "FIND_REGISTRATION_NUMBER": "Eve cihê ku hûn bibînin hejmara qeyda xwe",
+  "ENTER_INFO_BELOW": "(binivîse agahiyên li jêr)",
+  "ENTER_NUMBER": "Binivîse hejmara qeyda xwe",
+  "CONFIRM_NUMBER": "Dîsa-binivîse hejmara qeyda xwe",
+  "SUBMIT": "Radestkirin",
+  "NUMBERS_DONT_MATCH": "Hejmar li hev nakin",
+  "INVALID_NUMBER": "Hejmara qeydê ne hate dîtin",
+  "UPDATE_DATA_INFO_1": "Eger hejmara telefona we an jî navnîşana we hate guhertin, divê hûn emailê Xizmeta Penaberan bikin li",
+  "UPDATE_DATA_INFO_2": "Ev pir girînge, ji ber ku rayedar divê bi we re têkiliyê bikin ji bo ji we re bêjin kengî bên ba Nivîsgeha Penaberan Herêmî. Hûn hewcene navê xwe, roja bûyînê, hejmara qeydê, hejmara telefona xwe ya nû û navnîşana xwe ya nû bixin nav vê emailê de, bi Îngilîzî an Yewnanî."
 }
