--- a/ui/static/locale/prs.json
+++ b/ui/static/locale/prs.json
@@ -6,7 +6,7 @@
 "APPOINTMENT_DATES": "قرار ملاقات برای ثبت نام مکمل",
 "SELECT_ONE": "برای پیش رفتن یکي از گزینه ها را انتخاب نمایید",
 "RESULTS": "نتایج",
-"APPOINTMENT_RESULTS": "قرار ملاقات برای ثبت نام شمارهXXXXX  به ساعتXX:XXقبل از ظهر/بعد از ظهر به روزXXبرجXX سالXX در [اسم دفتر خدمات پناهدگی] تعین گردیده است.",
+"APPOINTMENT_RESULTS": "قرار ملاقات برای ثبت نام شماره {$ number $}  به ساعت {$ hour $} {$ am_pm $} در {$ time_of_day $}  مورخ {$ date $} در {$ office $}  تعین گردیده است.",
 "CLICK_FOR_MAP": "برای نقشه دفتر ساحوی خدمات پناهندگی اینجا را کلیک کنید.",
 "MORNING": "قبل از چاشت",
 "AFTERNOON": "بعدا از چاشت",
