--- a/ui/static/locale/el.json
+++ b/ui/static/locale/el.json
@@ -8,7 +8,7 @@
   "SELECT_ONE": "(επιλέξτε μία από τις παρακάτω επιλογές για να προχωρήσετε)",
   "MORE_INFORMATION": "More Information Soon",
   "RESULTS": "Αποτελέσματα:",
-  "APPOINTMENT_RESULTS": "Η συνέντευξη για την εξέταση της αίτησης ασύλου για τον αριθμό προκαταγραφής {$ number $} έχει προγραμματιστεί για τις {$ hour $} {$ am_pm $} το {$ time_of_the_day $} στις {$ date $} , στο γραφείο {$ office $}.",
+  "APPOINTMENT_RESULTS": "Η συνέντευξη για την εξέταση της αίτησης ασύλου για τον αριθμό προκαταγραφής {$ number $} έχει προγραμματιστεί για τις {$ hour $} {$ am_pm $} το {$ time_of_the_day $} στις {$ date $} , στο {$ office $}.",
   "CLICK_FOR_MAP": "Κάντε κλικ εδώ για τον χάρτη της περιοχής που βρίσκεται το γραφείο.",
   "MORNING": "Πρωί",
   "AFTERNOON": "Απόγευμα",
@@ -36,5 +36,5 @@
   "INVALID_NUMBER": "Ο αριθμός του αιτούντος δεν βρέθηκε",
 
   "UPDATE_DATA_INFO_1": "Αν ο αριθμός τηλεφώνου ή διεύθυνση κατοικίας/παραμονής σας, έχει αλλάξει παρακαλώ επικοινωνήστε με την Διεύθυνση Ασύλου στην παρακάτω ηλεκτρονική διεύθυνση",
-  "UPDATE_DATA_INFO_2": "Το παρακάτω είναι απαραίτητο προκειμένου οι Αρχές να επικοινωνήσουν μαζί σας για το πότε θα παρουσιαστείται στο \"Περιφεριακή Υπηρεσία Ασύλου\". Στο ηλεκτρονικό σας μήνυμα θα πρέπει να συμπεριλάβεται τα ακόλουθα στοιχεία: Όνομα, ημερομηνία γέννησης, αριθμός αιτούντα, νέος αιρθμός τηλεφώνου, νέα διεύθυνση διαμονής/κατοικίας\" μεταφρασμένα τόσο στην Ελληνική όσο και στην Αγγλική γλώσσα."
+  "UPDATE_DATA_INFO_2": "Το παραπάνω είναι απαραίτητο προκειμένου οι Αρχές να επικοινωνήσουν μαζί σας για το πότε θα παρουσιαστείται στο \"Περιφεριακή Υπηρεσία Ασύλου\". Στο ηλεκτρονικό σας μήνυμα θα πρέπει να συμπεριλάβεται τα ακόλουθα στοιχεία: Όνομα, ημερομηνία γέννησης, Aριθμός Απλής Καταγραφής, νέος αιρθμός τηλεφώνου, νέα διεύθυνση διαμονής/κατοικίας\" μεταφρασμένα τόσο στην Ελληνική όσο και στην Αγγλική γλώσσα."
 }
