--- a/ui/static/locale/el.json
+++ b/ui/static/locale/el.json
@@ -7,8 +7,8 @@
   "APPOINTMENT_DATES": "Ραντεβού για πλήρη καταγραφή",
   "SELECT_ONE": "(επιλέξτε μία από τις παρακάτω επιλογές για να προχωρήσετε)",
   "MORE_INFORMATION": "More Information Soon",
-  "RESULTS": "Αποτελέσματα:",
-  "APPOINTMENT_RESULTS": "Η συνέντευξη για την εξέταση της αίτησης ασύλου για τον αριθμό προκαταγραφής {$ number $} έχει προγραμματιστεί για τις {$ hour $} {$ am_pm $} το {$ time_of_the_day $} στις {$ date $} , στο {$ office $}.",
+  "RESULTS": "Αποτελεσματα:",
+  "APPOINTMENT_RESULTS": "Η συνέντευξη για την εξέταση της αίτησης ασύλου για τον αριθμό προκαταγραφής {$ number $} έχει προγραμματιστεί για τις {$ hour $} {$ am_pm $} το {$ time_of_the_day $} στις {$ date $} , στο γραφείο {$ office $}.",
   "CLICK_FOR_MAP": "Κάντε κλικ εδώ για τον χάρτη της περιοχής που βρίσκεται το γραφείο.",
   "MORNING": "Πρωί",
   "AFTERNOON": "Απόγευμα",
@@ -31,10 +31,10 @@
   "ENTER_INFO_BELOW": "(Εισάγετε τα στοιχεία σας παρακάτω)",
   "ENTER_NUMBER": "Εισάγετε τον αριθμό απλής καταγραφής",
   "CONFIRM_NUMBER": "Επιβεβαιώστε τον αριθμό απλής καταγραφής",
-  "SUBMIT": "Υποβάλλετε",
+  "SUBMIT": "Υποβολή",
   "NUMBERS_DONT_MATCH": "Οι αριθμοί δεν ταιριάζουν",
   "INVALID_NUMBER": "Ο αριθμός του αιτούντος δεν βρέθηκε",
 
   "UPDATE_DATA_INFO_1": "Αν ο αριθμός τηλεφώνου ή διεύθυνση κατοικίας/παραμονής σας, έχει αλλάξει παρακαλώ επικοινωνήστε με την Διεύθυνση Ασύλου στην παρακάτω ηλεκτρονική διεύθυνση",
-  "UPDATE_DATA_INFO_2": "Το παραπάνω είναι απαραίτητο προκειμένου οι Αρχές να επικοινωνήσουν μαζί σας για το πότε θα παρουσιαστείται στο \"Περιφεριακή Υπηρεσία Ασύλου\". Στο ηλεκτρονικό σας μήνυμα θα πρέπει να συμπεριλάβεται τα ακόλουθα στοιχεία: Όνομα, ημερομηνία γέννησης, Aριθμός Απλής Καταγραφής, νέος αιρθμός τηλεφώνου, νέα διεύθυνση διαμονής/κατοικίας\" μεταφρασμένα τόσο στην Ελληνική όσο και στην Αγγλική γλώσσα."
+  "UPDATE_DATA_INFO_2": "Το παραπάνω είναι απαραίτητο προκειμένου οι Αρχές να επικοινωνήσουν μαζί σας για το πότε θα παρουσιαστείτε στο \"Περιφεριακή Υπηρεσία Ασύλου\". Στο ηλεκτρονικό σας μήνυμα θα πρέπει να συμπεριλάβεται τα ακόλουθα στοιχεία: Όνομα, ημερομηνία γέννησης, Aριθμός Απλής Καταγραφής, νέος αριθμός τηλεφώνου, νέα διεύθυνση διαμονής/κατοικίας\" μεταφρασμένα τόσο στην Ελληνική όσο και στην Αγγλική γλώσσα."
 }
