--- a/ui/static/locale/ar.json
+++ b/ui/static/locale/ar.json
@@ -35,6 +35,6 @@
   "NUMBERS_DONT_MATCH": "الأرقام لا تتطابق",
   "INVALID_NUMBER": "رقم التسجيل غير موجود",
 
-  "UPDATE_DATA_INFO_1": "إذا تغير عنوانك أو رقم هاتفك ، يجب إرسال بريد إلكتروني على",
-  "UPDATE_DATA_INFO_2": "وهذا أمر مهم جدا، لأنه يتعين على السلطات أن تتصل بك لتقول لكم متى تأتي إلى مكتب اللجوء الإقليمي. تحتاج إلى إدراج اسمك، وتاريخ الميلاد، رقم التسجيل، رقم الهاتف الجديد وعنوانك الجديد في هذا البريد الإلكتروني باللغة الإنجليزية أو اليونانية."
+  "UPDATE_DATA_INFO_1": "هدف هذه الأداة إلى إتاحة المعلومات بشأن مواعيد التسجيل لدى مراكز دائرة اللجوء اليونانية.<br /><br />  إذا تغير عنوانك أو رقم هاتفك ، يجب إرسال بريد إلكتروني على",
+  "UPDATE_DATA_INFO_2": "وهذا أمر مهم جدا، لأنه يتعين على السلطات أن تتصل بك لتقول لكم متى تأتي إلى مكتب اللجوء الإقليمي. تحتاج إلى إدراج اسمك، وتاريخ الميلاد، رقم التسجيل، رقم الهاتف الجديد وعنوانك الجديد في هذا البريد الإلكتروني باللغة الإنجليزية أو اليونانية.<br /><br />  تستند جميع المعلومات المستخدمة في هذه الأداة  إلى قوائم مواعيد التسجيل التي تصدر عن دائرة اللجوء اليونانية."
 }
