--- a/ui/static/locale/fa.json
+++ b/ui/static/locale/fa.json
@@ -35,6 +35,6 @@
   "NUMBERS_DONT_MATCH": "اعداد با هم مطابقت ندارند",
   "INVALID_NUMBER": "شماره ثبت یافت نشد",
 
-  "UPDATE_DATA_INFO_1": "اگر شماره تلفن خود را و یا تغییر آدرس، شما نیاز به ایمیل سرویس پناهندگی در",
-  "UPDATE_DATA_INFO_2": "این بسیار مهم است، چرا که مقامات باید برای تماس با شما به شما بگویم که برای آمدن به پناهندگی دفتر منطقه ای. شما نیاز به شامل نام، تاریخ تولد، شماره ثبت، شماره تلفن جدید و آدرس جدید خود را در این ایمیل، به زبان انگلیسی یا یونانی."
+  "UPDATE_DATA_INFO_1": " این ابزار   برای تسهیل ارائه اطلاعات  در مورد قرار های  ملاقات برای ثبت نام  با خدمات پناهندگی یونان  طراحی شده است.<br /><br /> اگر شماره تلفن خود را و یا تغییر آدرس، شما نیاز به ایمیل سرویس پناهندگی در",
+  "UPDATE_DATA_INFO_2": "این بسیار مهم است، چرا که مقامات باید برای تماس با شما به شما بگویم که برای آمدن به پناهندگی دفتر منطقه ای. شما نیاز به شامل نام، تاریخ تولد، شماره ثبت، شماره تلفن جدید و آدرس جدید خود را در این ایمیل، به زبان انگلیسی یا یونانی.<br /><br />اطلاعاتی که در این ابزار استفاده شده از لیست های قرار ملاقات برای ثبت نام که توسط خدمات پناهندگی یونان ارائه گشته؛ کسب شده است. "
 }
