--- a/ui/static/locale/kmr.json
+++ b/ui/static/locale/kmr.json
@@ -17,6 +17,6 @@
   "SUBMIT": "Radestkirin",
   "NUMBERS_DONT_MATCH": "Hejmar li hev nakin",
   "INVALID_NUMBER": "Hejmara qeydê ne hate dîtin",
-  "UPDATE_DATA_INFO_1": "Eger hejmara telefona we an jî navnîşana we hate guhertin, divê hûn emailê Xizmeta Penaberan bikin li",
-  "UPDATE_DATA_INFO_2": "Ev pir girînge, ji ber ku rayedar divê bi we re têkiliyê bikin ji bo ji we re bêjin kengî bên ba Nivîsgeha Penaberan Herêmî. Hûn hewcene navê xwe, roja bûyînê, hejmara qeydê, hejmara telefona xwe ya nû û navnîşana xwe ya nû bixin nav vê emailê de, bi Îngilîzî an Yewnanî."
+  "UPDATE_DATA_INFO_1": "<strong>Ev amûreka ji ber ku peydakirina agahiyan li ser tomarkirina jîvanan bi Serwîsa Penaberên Yewnanî re hatiye sêwirandin. </strong><br /><br />Eger hejmara telefona we an jî navnîşana we hate guhertin, divê hûn emailê Xizmeta Penaberan bikin li",
+  "UPDATE_DATA_INFO_2": "Ev pir girînge, ji ber ku rayedar divê bi we re têkiliyê bikin ji bo ji we re bêjin kengî bên ba Nivîsgeha Penaberan Herêmî. Hûn hewcene navê xwe, roja bûyînê, hejmara qeydê, hejmara telefona xwe ya nû û navnîşana xwe ya nû bixin nav vê emailê de, bi Îngilîzî an Yewnanî.<br /><br />Agahiyên di vê amûrê de hatine bikaranîn, ji lîsteyan tomaran jîvanan ku bi rex Serwîsa Penaberên Yewnanî hatiye peyda kirin tê standin. "
 }
