--- a/ui/static/locale/pan.json
+++ b/ui/static/locale/pan.json
@@ -17,6 +17,6 @@
   "SUBMIT": "ਜਮ੍ਹਾਂ ਕਰੋ",
   "NUMBERS_DONT_MATCH": "ਨੰਬਰ ਮੇਲ ਨਹੀਂ ਖਾਂਦੇ",
   "INVALID_NUMBER": "ਰਜਿਸਟ੍ਰੇਸ਼ਨ ਨੰਬਰ ਨਹੀਂ ਮਿਲਿਆ",
-  "UPDATE_DATA_INFO_1": "ਜੇ ਤੁਹਾਡਾ ਫੋਨ ਨੰਬਰ ਜਾਂ ਪਤਾ ਬਦਲਦਾ ਹੈ, ਤਾਂ ਤੁਹਾਨੂੰ ਅਸਾਈਲਮ ਸਰਵਿਸ ਨੂੰ ਇਸ ਤੇ ਈਮੇਲ ਕਰਨ ਦੀ ਲੋੜ ਹੈ:",
-  "UPDATE_DATA_INFO_2": "ਇਹ ਬਹੁਤ ਮਹੱਤਵਪੂਰਨ ਹੈ, ਕਿਉਂਕਿ ਅਥਾਰਿਟੀਆਂ ਨੂੰ ਤੁਹਾਨੂੰ ਦੱਸਣ ਦੀ ਲੋੜ ਹੁੰਦੀ ਹੈ ਕਿ ਖੇਤਰੀ ਅਸਾਈਲਮ ਆਫਿਸ ਵਿੱਚ ਕਦੋਂ ਆਉਣਾ ਹੈ। ਤੁਹਾਨੂੰ ਇਸ ਈਮੇਲ ਵਿੱਚ ਇੰਗਲਿਸ਼ ਜਾਂ ਗ੍ਰੀਕ ਭਾਸ਼ਾ ਵਿੱਚ, ਆਪਣਾ ਨਾਮ, ਜਨਮ ਮਿਤੀ, ਰਜਿਸਟ੍ਰੇਸ਼ਨ ਨੰਬਰ, ਨਵਾਂ ਫੋਨ ਨੰਬਰ ਅਤੇ ਆਪਣਾ ਨਵਾਂ ਪਤਾ ਸ਼ਾਮਲ ਕਰਨ ਦੀ ਲੋੜ ਹੈ।"
+  "UPDATE_DATA_INFO_1": "<strong>ਇਹ ਸਾਧਨ ਗ੍ਰੀਕ ਅਸਾਈਲਮ ਸਰਵਿਸ ਦੇ ਨਾਲ ਰਜਿਸਟ੍ਰੇਸ਼ਨ ਅਪਾਇੰਟਮੈਂਟਾਂ ਬਾਰੇ ਜਾਣਕਾਰੀ ਦਾ ਪ੍ਰਬੰਧ ਕਰਨ ਵਿੱਚ ਸਹਾਇਤਾ ਕਰਨ ਲਈ ਤਿਆਰ ਕੀਤਾ ਗਿਆ ਹੈ।</strong><br /><br />ਜੇ ਤੁਹਾਡਾ ਫੋਨ ਨੰਬਰ ਜਾਂ ਪਤਾ ਬਦਲਦਾ ਹੈ, ਤਾਂ ਤੁਹਾਨੂੰ ਅਸਾਈਲਮ ਸਰਵਿਸ ਨੂੰ ਇਸ ਤੇ ਈਮੇਲ ਕਰਨ ਦੀ ਲੋੜ ਹੈ:",
+  "UPDATE_DATA_INFO_2": "ਇਹ ਬਹੁਤ ਮਹੱਤਵਪੂਰਨ ਹੈ, ਕਿਉਂਕਿ ਅਥਾਰਿਟੀਆਂ ਨੂੰ ਤੁਹਾਨੂੰ ਦੱਸਣ ਦੀ ਲੋੜ ਹੁੰਦੀ ਹੈ ਕਿ ਖੇਤਰੀ ਅਸਾਈਲਮ ਆਫਿਸ ਵਿੱਚ ਕਦੋਂ ਆਉਣਾ ਹੈ। ਤੁਹਾਨੂੰ ਇਸ ਈਮੇਲ ਵਿੱਚ ਇੰਗਲਿਸ਼ ਜਾਂ ਗ੍ਰੀਕ ਭਾਸ਼ਾ ਵਿੱਚ, ਆਪਣਾ ਨਾਮ, ਜਨਮ ਮਿਤੀ, ਰਜਿਸਟ੍ਰੇਸ਼ਨ ਨੰਬਰ, ਨਵਾਂ ਫੋਨ ਨੰਬਰ ਅਤੇ ਆਪਣਾ ਨਵਾਂ ਪਤਾ ਸ਼ਾਮਲ ਕਰਨ ਦੀ ਲੋੜ ਹੈ।<br /><br />ਇਸ ਸਾਧਨ ਵਿੱਚ ਵਰਤੀ ਗਈ ਜਾਣਕਾਰੀ ਗ੍ਰੀਕ ਅਸਾਈਲਮ ਸਰਵਿਸ ਦੁਆਰਾ ਮੁਹੱਈਆ ਕੀਤੀਆਂ ਗਈਆਂ ਰਜਿਸਟ੍ਰੇਸ਼ਨ ਅਪਾਇੰਟਮੈਂਟ ਸੂਚੀਆਂ ਤੋਂ ਹਾਸਲ ਕੀਤੀ ਗਈ ਹੈ।"
 }
