--- a/ui/static/locale/prs.json
+++ b/ui/static/locale/prs.json
@@ -17,6 +17,6 @@
 "SUBMIT": "ارسال نمایید",
 "NUMBERS_DONT_MATCH": "شماره یکسان نمیباشد",
 "INVALID_NUMBER": "شماره ثبت نام دریافت نگردید",
-"UPDATE_DATA_INFO_1": "اگر نشانی یا شماره تلفن شما عوض گردیده باشد پس به دفتر خدمات پناهندگی ایمیل بفرستید",
-"UPDATE_DATA_INFO_2": "این نهایت مهم است، زیرا که مقامات نیاز دارد با شما تماس بگیرد و میخواهد بگوید شما چه وقت به دفتر خدمات پناهندگی بیایید. شما باید در ایمیل تان اسم، تاریخ تولد، شماره جدید تماس، و نشانی جدید خود به زبان یونانی یا انگلیسی شامل نمایید."
+"UPDATE_DATA_INFO_1": "این ابزار برای تسهیل فراهم نمودن معلومات در مورد قرار ملاقات ثبت نام همرای خدمات پناهندگی یونان طرحه شده است.<br /><br /> اگر نشانی یا شماره تلفن شما عوض گردیده باشد پس به دفتر خدمات پناهندگی ایمیل بفرستید",
+"UPDATE_DATA_INFO_2": "این نهایت مهم است، زیرا که مقامات نیاز دارد با شما تماس بگیرد و میخواهد بگوید شما چه وقت به دفتر خدمات پناهندگی بیایید. شما باید در ایمیل تان اسم، تاریخ تولد، شماره جدید تماس، و نشانی جدید خود به زبان یونانی یا انگلیسی شامل نمایید.<br /><br /> معلوماتی که در این ابزار استفاده گریده از لست های قرار ملاقات اخذ گردیده است که توسط خدمات پناهندگی یونان فراهم گردیده است."
 }
