--- a/ui/static/locale/ur.json
+++ b/ui/static/locale/ur.json
@@ -17,6 +17,6 @@
 "SUBMIT": "جمع کریں",
 "NUMBERS_DONT_MATCH": "نمبرمیل نہیں کھاتا",
 "INVALID_NUMBER": "رجسٹریشن نمبر نہیں ملا",
-"UPDATE_DATA_INFO_1": "اگر آپ کا فون نمبر یا پتہ تبدیل ہو گیا ہو تو، آپ کو اس پتہ پر اسائلم سروس کو ای میل کرنا ہوگا:",
-"UPDATE_DATA_INFO_2": "یہ بہت ہی اہم ہے، کیونکہ آپ کو یہ بتانے کے لیے حکّام کو آپ سے رابطہ کرنا ہوگا کہ آپ ریجنل اسائلم آفس میں کب آئیں۔ آپ کو اپنا نام، تاریخ پیدائش، رجسٹریشن نمبر اور اپنا نیا پتہ اس ای میل میں انگریزی یا یونانی زبان میں شامل کرنا ہوگا۔"
+"UPDATE_DATA_INFO_1": "یہ ٹول گریک اسائلم سروس ( یونانی پناہ گزیں خدمات) میں رجسٹریشن کے اپائنٹمنٹ سے متعلق معلومات کی فراہمی کی سہولت کے لیے مرتب کیا گیا ہے۔<br /><br /> اگر آپ کا فون نمبر یا پتہ تبدیل ہو گیا ہو تو، آپ کو اس پتہ پر اسائلم سروس کو ای میل کرنا ہوگا:",
+"UPDATE_DATA_INFO_2": "یہ بہت ہی اہم ہے، کیونکہ آپ کو یہ بتانے کے لیے حکّام کو آپ سے رابطہ کرنا ہوگا کہ آپ ریجنل اسائلم آفس میں کب آئیں۔ آپ کو اپنا نام، تاریخ پیدائش، رجسٹریشن نمبر اور اپنا نیا پتہ اس ای میل میں انگریزی یا یونانی زبان میں شامل کرنا ہوگا۔<br /><br />اس ٹول میں استعمال شدہ معلومات گریک اسائلم سروس ( یونانی پناہ گزیں خدمات) کی طرف سے فراہم کردہ رجسٹریشن کے اپائنٹمنٹ کی فہرست سے اخذ کی گئی ہیں۔ "
 }
