--- a/ui/static/locale/el.json
+++ b/ui/static/locale/el.json
@@ -35,6 +35,6 @@
   "NUMBERS_DONT_MATCH": "Οι αριθμοί δεν ταιριάζουν",
   "INVALID_NUMBER": "Ο αριθμός του αιτούντος δεν βρέθηκε",
 
-  "UPDATE_DATA_INFO_1": "Αν ο αριθμός τηλεφώνου ή διεύθυνση κατοικίας/παραμονής σας, έχει αλλάξει παρακαλώ επικοινωνήστε με την Διεύθυνση Ασύλου στην παρακάτω ηλεκτρονική διεύθυνση",
-  "UPDATE_DATA_INFO_2": "Το παραπάνω είναι απαραίτητο προκειμένου οι Αρχές να επικοινωνήσουν μαζί σας για το πότε θα παρουσιαστείτε στο \"Περιφεριακή Υπηρεσία Ασύλου\". Στο ηλεκτρονικό σας μήνυμα θα πρέπει να συμπεριλάβεται τα ακόλουθα στοιχεία: Όνομα, ημερομηνία γέννησης, Aριθμός Απλής Καταγραφής, νέος αριθμός τηλεφώνου, νέα διεύθυνση διαμονής/κατοικίας\" μεταφρασμένα τόσο στην Ελληνική όσο και στην Αγγλική γλώσσα."
+  "UPDATE_DATA_INFO_1": "<strong>Αυτό το ηλεκτρονικό εργαλείο έχει σχεδιαστεί για να διευκολύνει την παροχή πληροφοριών σχετικά με τα ραντεβού πλήρους καταγραφής στην Ελληνική Υπηρεσία Ασύλου.</strong><br /><br /> Αν ο αριθμός τηλεφώνου ή διεύθυνση κατοικίας/παραμονής σας, έχει αλλάξει παρακαλώ επικοινωνήστε με την Διεύθυνση Ασύλου στην παρακάτω ηλεκτρονική διεύθυνση",
+  "UPDATE_DATA_INFO_2": "Το παραπάνω είναι απαραίτητο προκειμένου οι Αρχές να επικοινωνήσουν μαζί σας για το πότε θα παρουσιαστείτε στο \"Περιφεριακή Υπηρεσία Ασύλου\". Στο ηλεκτρονικό σας μήνυμα θα πρέπει να συμπεριλάβεται τα ακόλουθα στοιχεία: Όνομα, ημερομηνία γέννησης, Aριθμός Απλής Καταγραφής, νέος αριθμός τηλεφώνου, νέα διεύθυνση διαμονής/κατοικίας\" μεταφρασμένα τόσο στην Ελληνική όσο και στην Αγγλική γλώσσα.<br /><br />Οι πληροφορίες που περιέχονται στο ηλεκτρονικό αυτό εργαλείο προέρχονται από τις λίστες που παρέχει η Ελληνική Υπηρεσία Ασύλου με τα ραντεβού πλήρους καταγραφής."
 }
