- adding new text and translations for ar/en/ur/el/fa - removing search url for searching appointments - removing redundant console.log - removing buttons on #search page

--- a/ui/static/locale/ar.json
+++ b/ui/static/locale/ar.json
@@ -35,6 +35,17 @@
   "NUMBERS_DONT_MATCH": "الأرقام لا تتطابق",
   "INVALID_NUMBER": "رقم التسجيل غير موجود",
 
-  "UPDATE_DATA_INFO_1": "هدف هذه الأداة إلى إتاحة المعلومات بشأن مواعيد التسجيل لدى مراكز دائرة اللجوء اليونانية.<br /><br />  إذا تغير عنوانك أو رقم هاتفك ، يجب إرسال بريد إلكتروني على",
-  "UPDATE_DATA_INFO_2": "وهذا أمر مهم جدا، لأنه يتعين على السلطات أن تتصل بك لتقول لكم متى تأتي إلى مكتب اللجوء الإقليمي. تحتاج إلى إدراج اسمك، وتاريخ الميلاد، رقم التسجيل، رقم الهاتف الجديد وعنوانك الجديد في هذا البريد الإلكتروني باللغة الإنجليزية أو اليونانية.<br /><br />  تستند جميع المعلومات المستخدمة في هذه الأداة  إلى قوائم مواعيد التسجيل التي تصدر عن دائرة اللجوء اليونانية."
+  "SEARCH_INFO_1": "<strong>شكراً لاستخدامك أداة البحث. لم نقم بعد بإضافة معلومات حول مواعيد التسجيل الكامل لهذه الأداة.</strong><br /><br />",
+  "SEARCH_INFO_2": "للتواصل مع دائرة اللجوء اليونانية والاستعلام حول موعد مقابلتك، يمكنك:<br />",
+  "SEARCH_INFO_3": "محاولة الاتصال بخط الاستفسارات التابع لدائرة اللجوء، وهو متاح من الاثنين حتى الجمعة، بين الساعة الـ 2 و الـ 3 ظهراً: ",
+  "SEARCH_INFO_4": "أو زيارة أحد",
+  "SEARCH_INFO_4_ASYLUM_OFFICE": "مكاتب اللجوء",
+  "SEARCH_INFO_5": "<br /><br /> في حال كنت قد",
+  "SEARCH_INFO_5_PRE_REGISTERED": "أتممت تسجيلك ",
+  "SEARCH_INFO_6": "تاريخ موعد مقابلتك للتسجيل الكامل مكتوباً على بطاقتك. ",
+  "SEARCH_INFO_7": "في حال قمت بتغيير رقم هاتفك أو عنوان إقامتك، عليك مراسلة دائرة اللجوء على البريد الالكتروني: ",
+  "SEARCH_INFO_8": " مستخدماً اللغة الإنجليزية أو اليونانية.",
+  "SEARCH_INFO_9": "يجب أن تتضمن الرسالة اسمك، تاريخ ميلادك، رقم التسجيل الخاص بك ورقم هاتفك و/أو عنوان إقامتك.",
+  "SEARCH_INFO_10": "إن احتجت لمساعدة قانونية، إبحث عن إحدى المنظمات المختصة من ",
+  "SEARCH_INFO_10_HERE": "هنا"
 }
