--- a/ui/static/locale/ur.json
+++ b/ui/static/locale/ur.json
@@ -1,22 +1,34 @@
 {
   "APP_NAME": "UR Searcher App",
   "OTHER_LINKS": "مفید لنکس",
-"RELOCATION_DECISONS": "جگہ کی منتقلی کے فیصلے",
-"SEARCHING_FOR": "آپ کیا تلاش کر رہے ہیں؟",
-"APPOINTMENT_DATES": "مکمل رجسٹریشن کے اپائنٹمنٹس",
-"SELECT_ONE": "آگے بڑھنے کے لیے ذیل میں سے ایک انتخاب منتخب کریں",
-"RESULTS": "نتائج",
-"APPOINTMENT_RESULTS": "رجسٹریشن نمبر {$ number $} کے لیے مکمل رجسٹریشن اپائنٹمنٹس {$ date $} کو {$ time_of_day $} کے[ {$ hour $} {$ am_pm $} بجے {$ office $}میں طئے کیا گیا ہے۔",
-"CLICK_FOR_MAP": "دفتر کے علاقہ کے نقشہ کے لیے یہاں کلک کریں۔",
-"MORNING": "صبح",
-"AFTERNOON": "دوپہر",
-"FIND_REGISTRATION_NUMBER": "یہ وہ جگہ ہے جہاں پر آپ کو آپ کا رجسٹریشن نمبر ملے گا",
-"ENTER_INFO_BELOW": "(نیچے معلومات داخل کریں)",
-"ENTER_NUMBER": "اپنا رجسٹریشن نمبر داخل کریں",
-"CONFIRM_NUMBER": "اپنا رجسٹریشن نمبر دوبارہ داخل کریں",
-"SUBMIT": "جمع کریں",
-"NUMBERS_DONT_MATCH": "نمبرمیل نہیں کھاتا",
-"INVALID_NUMBER": "رجسٹریشن نمبر نہیں ملا",
-"UPDATE_DATA_INFO_1": "یہ ٹول گریک اسائلم سروس ( یونانی پناہ گزیں خدمات) میں رجسٹریشن کے اپائنٹمنٹ سے متعلق معلومات کی فراہمی کی سہولت کے لیے مرتب کیا گیا ہے۔<br /><br /> اگر آپ کا فون نمبر یا پتہ تبدیل ہو گیا ہو تو، آپ کو اس پتہ پر اسائلم سروس کو ای میل کرنا ہوگا:",
-"UPDATE_DATA_INFO_2": "یہ بہت ہی اہم ہے، کیونکہ آپ کو یہ بتانے کے لیے حکّام کو آپ سے رابطہ کرنا ہوگا کہ آپ ریجنل اسائلم آفس میں کب آئیں۔ آپ کو اپنا نام، تاریخ پیدائش، رجسٹریشن نمبر اور اپنا نیا پتہ اس ای میل میں انگریزی یا یونانی زبان میں شامل کرنا ہوگا۔<br /><br />اس ٹول میں استعمال شدہ معلومات گریک اسائلم سروس ( یونانی پناہ گزیں خدمات) کی طرف سے فراہم کردہ رجسٹریشن کے اپائنٹمنٹ کی فہرست سے اخذ کی گئی ہیں۔ "
+  "RELOCATION_DECISONS": "جگہ کی منتقلی کے فیصلے",
+  "SEARCHING_FOR": "آپ کیا تلاش کر رہے ہیں؟",
+  "APPOINTMENT_DATES": "مکمل رجسٹریشن کے اپائنٹمنٹس",
+  "SELECT_ONE": "آگے بڑھنے کے لیے ذیل میں سے ایک انتخاب منتخب کریں",
+  "RESULTS": "نتائج",
+  "APPOINTMENT_RESULTS": "رجسٹریشن نمبر {$ number $} کے لیے مکمل رجسٹریشن اپائنٹمنٹس {$ date $} کو {$ time_of_day $} کے[ {$ hour $} {$ am_pm $} بجے {$ office $}میں طئے کیا گیا ہے۔",
+  "CLICK_FOR_MAP": "دفتر کے علاقہ کے نقشہ کے لیے یہاں کلک کریں۔",
+  "MORNING": "صبح",
+  "AFTERNOON": "دوپہر",
+  "FIND_REGISTRATION_NUMBER": "یہ وہ جگہ ہے جہاں پر آپ کو آپ کا رجسٹریشن نمبر ملے گا",
+  "ENTER_INFO_BELOW": "(نیچے معلومات داخل کریں)",
+  "ENTER_NUMBER": "اپنا رجسٹریشن نمبر داخل کریں",
+  "CONFIRM_NUMBER": "اپنا رجسٹریشن نمبر دوبارہ داخل کریں",
+  "SUBMIT": "جمع کریں",
+  "NUMBERS_DONT_MATCH": "نمبرمیل نہیں کھاتا",
+  "INVALID_NUMBER": "رجسٹریشن نمبر نہیں ملا",
+
+  "SEARCH_INFO_1": "<strong>آپ کا سرچ ٹول وزٹ کرنے کے لیے شکریہ۔ہم سرچ ٹول کے لئے مکمل رجسٹریشن کی تقرری معلومات کو شامل نہیں کر رہے ہیں.</strong><br /><br />",
+  "SEARCH_INFO_2": "یونانی پناہ سروس سے رابطہ کرنے کے لیےاور اپنی ملاقات کے بارے میں، آپ کر سکتے ہیں:<br />",
+  "SEARCH_INFO_3": "پناہ سروس سوال لائن کال کرنے کی کوشش کریں،یہ پیر سے جمعرات سہ پہر 2بجےسے 3 بجے کے درمیان تک دستیاب ہوتے ہیں. اور: ",
+  "SEARCH_INFO_4": "یا پھر سیاسی پناہ کے",
+  "SEARCH_INFO_4_ASYLUM_OFFICE": "دفتر میں تشریف لائیں۔",
+  "SEARCH_INFO_5": "<br /><br /> ",
+  "SEARCH_INFO_5_PRE_REGISTERED": "اگر آپ پہلے سے ہی یونانی سرزمین پر رجسٹرڈ شدہ ہیں، تو  فل/ پوری رجسٹریشین کی تقرری کی تاریخ آپ کے کارڈ پر پہ لکھی ہونی چاہیے",
+  "SEARCH_INFO_6": "",
+  "SEARCH_INFO_7": "اگر آپ کا فون نمبر یا ایڈریس تبدیل ہوگیا ہے تو، آپ نئے ایڈریس اور فون نمبر کو سیاسی پناہ کے دفتر والوں اس ای میل پر ضرور بھجیں. ",
+  "SEARCH_INFO_8": "،انگریزی میں یا یونانی",
+  "SEARCH_INFO_9": "اپنا نام،تاریخ پیدائش ، رجسٹریشن نمبر، اور نئے فون نمبر اور / یا پتہ شامل کریں.",
+  "SEARCH_INFO_10": "اگر آپ کو قانونی مدد کی ضرورت ہو تو، یہاں آپ کوئی تنظیم تلاش کرسکتے ",
+  "SEARCH_INFO_10_HERE": "ہیں"
 }
