--- a/ui/static/locale/el.json
+++ b/ui/static/locale/el.json
@@ -35,6 +35,18 @@
   "NUMBERS_DONT_MATCH": "Οι αριθμοί δεν ταιριάζουν",
   "INVALID_NUMBER": "Ο αριθμός του αιτούντος δεν βρέθηκε",
 
-  "UPDATE_DATA_INFO_1": "<strong>Αυτό το ηλεκτρονικό εργαλείο έχει σχεδιαστεί για να διευκολύνει την παροχή πληροφοριών σχετικά με τα ραντεβού πλήρους καταγραφής στην Ελληνική Υπηρεσία Ασύλου.</strong><br /><br /> Αν ο αριθμός τηλεφώνου ή διεύθυνση κατοικίας/παραμονής σας, έχει αλλάξει παρακαλώ επικοινωνήστε με την Διεύθυνση Ασύλου στην παρακάτω ηλεκτρονική διεύθυνση",
-  "UPDATE_DATA_INFO_2": "Το παραπάνω είναι απαραίτητο προκειμένου οι Αρχές να επικοινωνήσουν μαζί σας για το πότε θα παρουσιαστείτε στο \"Περιφεριακή Υπηρεσία Ασύλου\". Στο ηλεκτρονικό σας μήνυμα θα πρέπει να συμπεριλάβεται τα ακόλουθα στοιχεία: Όνομα, ημερομηνία γέννησης, Aριθμός Απλής Καταγραφής, νέος αριθμός τηλεφώνου, νέα διεύθυνση διαμονής/κατοικίας\" μεταφρασμένα τόσο στην Ελληνική όσο και στην Αγγλική γλώσσα.<br /><br />Οι πληροφορίες που περιέχονται στο ηλεκτρονικό αυτό εργαλείο προέρχονται από τις λίστες που παρέχει η Ελληνική Υπηρεσία Ασύλου με τα ραντεβού πλήρους καταγραφής."
+  "SEARCH_INFO_1": "<strong>Ευχαριστούμε που επιλέξατε το Εργαλείο Αναζήτησης. Προς το παρόν, το Εργαλείο Αναζήτησης δεν θα παρέχει ενημέρωση σχετικά με το ραντεβού σας στην Υπηρεσία Ασύλου για Πλήρη Καταγραφή.</strong><br /><br />",
+  "SEARCH_INFO_2": "Για πληροφορίες σχετικά με το ραντεβού σας στην Υπηρεσία Ασύλου, μπορείτε:<br />",
+  "SEARCH_INFO_3": "Να επικοινωνήσετε με την Υπηρεσία, από Δευτέρα έως Παρασκευή και μόνο από από τις 2 μμ έως τις 3 μμ στο τηλέφωνο ",
+  "SEARCH_INFO_4": "Ή να επισκεφτείτε  το πιο κοντινό σε εσάς Περιφερειακό",
+  "SEARCH_INFO_4_ASYLUM_OFFICE": "Γραφείο Ασύλου",
+  "SEARCH_INFO_5": "<br /><br />Αν έχετε ήδη κάνει  ",
+  "SEARCH_INFO_5_PRE_REGISTERED": "Απλή Καταγραφή",
+  "SEARCH_INFO_6": "στην ηπειρωτική Ελλάδα, η ημερομηνία του ραντεβού σας για την Πλήρη Εγγραφή (Ημερομηνία Πλήρους Εγγραφής) θα πρέπει να είναι γραμμένη πάνω στην κάρτα που έχετε.",
+  "SEARCH_INFO_7": "Εάν έχει αλλάξει ο αριθμός του τηλεφώνου σας, πρέπει άμεσα να ενημερώσετε την Υπηρεσία Ασύλου, στέλνοντας email στο ",
+  "SEARCH_INFO_8": "και γράφοντας στα Ελληνικά ή στα Αγγλικά.",
+  "SEARCH_INFO_9": "Μην ξεχάσετε να γράψετε το Όνομά σας, την Ημερομηνία Γέννησης, τον Αριθμό Απλής Καταγραφής (πάνω στην κάρτα σας), το νέο αριθμό τηλεφώνου σας ή/και τη διεύθυνσή σας.",
+  "SEARCH_INFO_10": "Αν χρειάζεστε νομική βοήθεια, μπορείτε να την αναζητήσετε σε κάποια από τις οργανώσεις, ",
+  "SEARCH_INFO_10_HERE": "εδώ"
+
 }
