--- a/ui/static/locale/fa.json
+++ b/ui/static/locale/fa.json
@@ -35,6 +35,17 @@
   "NUMBERS_DONT_MATCH": "اعداد با هم مطابقت ندارند",
   "INVALID_NUMBER": "شماره ثبت یافت نشد",
 
-  "UPDATE_DATA_INFO_1": " این ابزار   برای تسهیل ارائه اطلاعات  در مورد قرار های  ملاقات برای ثبت نام  با خدمات پناهندگی یونان  طراحی شده است.<br /><br /> اگر شماره تلفن خود را و یا تغییر آدرس، شما نیاز به ایمیل سرویس پناهندگی در",
-  "UPDATE_DATA_INFO_2": "این بسیار مهم است، چرا که مقامات باید برای تماس با شما به شما بگویم که برای آمدن به پناهندگی دفتر منطقه ای. شما نیاز به شامل نام، تاریخ تولد، شماره ثبت، شماره تلفن جدید و آدرس جدید خود را در این ایمیل، به زبان انگلیسی یا یونانی.<br /><br />اطلاعاتی که در این ابزار استفاده شده از لیست های قرار ملاقات برای ثبت نام که توسط خدمات پناهندگی یونان ارائه گشته؛ کسب شده است. "
+  "SEARCH_INFO_1": "<strong>برای بازدید از ابزارِ جستجو از شما تشکر میکنیم. ما در حال حاضر اطلاعات قرارملاقات های ثبت نام کامل را به ابزار جستجو اضافه نمی کنیم. </strong><br /><br />",
+  "SEARCH_INFO_2": "برای تماس با سرویس پناهجویی یونان در مورد قرارملاقات تان، می توانید: <br />",
+  "SEARCH_INFO_3": "تلاش کنید که با خط ویژه مخصوص طرح سوال که از دوشنبه تا جمعه بین ساعت 2 بعدازظهر تا 3 بعدازظهر در دسترس است، تماس بگیرید: ",
+  "SEARCH_INFO_4": "یا از",
+  "SEARCH_INFO_4_ASYLUM_OFFICE": "دفتر پناهجویی بازدید کنید",
+  "SEARCH_INFO_5": "<br /><br />اگر در سرزمین ",
+  "SEARCH_INFO_5_PRE_REGISTERED": "صلی یونان،  پیش-ثبت نام  کرده اید ",
+  "SEARCH_INFO_6": "تاریخ ثبت نام کامل تان حتما بر روی کارت تان نوشته شده است.",
+  "SEARCH_INFO_7": "اگر شماره تلفن و یا آدرس تان تغییر کرده است، یک ایمیل به زبان انگلیسی یا یونانی به آدرس زیر بفرستید: ",
+  "SEARCH_INFO_8": "",
+  "SEARCH_INFO_9": "نام، تاریخ تولد، شماره ثبت نام و شماره تلفن یا /آدرس جدیدتان را بنویسید.",
+  "SEARCH_INFO_10": "اگر به کمک حقوقی نیاز دارید، می توانید از اینجا یک سازمان را برای این کار پیدا ",
+  "SEARCH_INFO_10_HERE": "کنید"
 }
